add to swagger needHelp
