# routes/api/needHelp.js
@@ -4,6 +4,11 @@ const { schemas } = require("../../models/needHelp");
 const ctrl = require("../../controllers/needHelp");
 const router = express.Router();
 
-router.post("/needhelp", authenticate, validateBody(schemas.addSchema), ctrl.sendNeedHelpMail);
+router.post(
+  "/",
+  authenticate,
+  validateBody(schemas.addSchema),
+  ctrl.sendNeedHelpMail
+);
 
 module.exports = router;
